gccida/g3/emit_cmp_and_jump_insns
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3846:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3851:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v34; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3852:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v35; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3866:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3871:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v54; // rsi 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3872:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v55; // rcx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3874:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v57; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3889:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v72; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3891:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code operand1; // [rsp+0h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3850:11: note: enum 'insn_code' is hidden by a non-type declaration of 'insn_code' here
insn_code insn_code; // eax 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3911:22: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = *( ( _DWORD *)&mode_class_0 + ( int)mode); 
                     ^~~~~~~~~~~~
                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3947:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( __int64)v7[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3951:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:3963:32: error: use of undeclared identifier 'insn_data_0'
mode = *( ( unsigned __int16 *)insn_data_0[1203].operand + 8); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:4002:62: error: invalid suffix 'xmode' on integer constant
emit_library_call( libfunc, LCT_CONST_MAKE_BLOCK, *(short *)0xmode, 2, v8, ( unsigned int)mode, v7, ( unsigned int)mode); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:4003:30: error: invalid suffix 'xmode' on integer constant
v8 = gen_reg_rtx( *(short *)0xmode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/optabs.c:4004:38: error: invalid suffix 'xmode' on integer constant
v63 = hard_libcall_value( *(short *)0xmode); 
                                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/emit_cmp_and_jump_insns/src/obj/optabs.o] Error 1
